新建一个另类名称的分支(strange_branch),测试访问路径;

--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "the content you are seeing comes from: branch=[master] file=[config-dev.yml]"
+  info: "the content you are seeing comes from: branch=[strange_branch] file=[config-dev.yml]"
