--- a/config-prod.yml
+++ b/config-prod.yml
@@ -1,2 +1,2 @@
 config:
-  info: "the content you are seeing comes from: branch=[prod] file=[config-prod.yml]"
+  info: "the content you are seeing comes from: branch=[master] file=[config-prod.yml]"
