--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,3 +1,3 @@
 config:
-  info: "the content you are seeing comes from: branch=[master] file=[config-dev.yml]"
+  info: "the content you are seeing comes from: branch=[master] file=[config-dev.yml] version=[1.0.2]"
   version: 1.0.2
